K8s/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "travel-app"
  namespace: "travel"
  labels:
    app: "frontend"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "frontend"
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
        - name: "travel-app"
          image: "720459752207.dkr.ecr.eu-north-1.amazonaws.com/k8s-travelling-ecr-repo:IMAGE_ID"
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
