K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-app
  namespace: travel

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:720459752207:certificate/3182b3ec-9101-4618-bfae-c2ec885b1d89
spec:
  ingressClassName: alb
  rules:
  - host: travel.urdhva.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: travel-app
            port:
              number: 80
